--- a/New_Test/pom.xml
+++ b/New_Test/pom.xml
@@ -16,6 +16,11 @@
 		</plugins>
 	</build>
 	<dependencies>
+	<dependency>
+    <groupId>com.codeborne</groupId>
+    <artifactId>phantomjsdriver</artifactId>
+    <version>1.2.1</version>
+</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
